--- a/package.json
+++ b/package.json
@@ -1,27 +1,88 @@
 {
-  "name": "diabet-dairy",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
-  }
+	"name": "diabet-dairy",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"pretty": "prettier . --write && eslint . --fix",
+		"db:generate": "drizzle-kit generate:pg",
+		"db:migrate": "bun run src/lib/db/migrate.ts",
+		"db:drop": "drizzle-kit drop",
+		"db:pull": "drizzle-kit introspect:pg",
+		"db:studio": "drizzle-kit studio",
+		"db:check": "drizzle-kit check:pg",
+		"db:push": "drizzle-kit push:pg",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@auth/core": "^0.16.1",
+		"@auth/drizzle-adapter": "^0.3.3",
+		"@ducanh2912/next-pwa": "^9.7.1",
+		"@hookform/resolvers": "^3.3.2",
+		"@internationalized/date": "^3.5.0",
+		"@radix-ui/react-alert-dialog": "^1.0.5",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@react-aria/button": "^3.8.3",
+		"@react-aria/calendar": "^3.5.1",
+		"@react-aria/datepicker": "^3.8.0",
+		"@react-aria/i18n": "^3.8.3",
+		"@react-aria/interactions": "^3.19.0",
+		"@react-stately/calendar": "^3.4.1",
+		"@react-stately/datepicker": "^3.8.0",
+		"@t3-oss/env-nextjs": "^0.7.0",
+		"@tanstack/react-table": "^8.10.6",
+		"@tanstack/react-virtual": "beta",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"dayjs": "^1.11.10",
+		"drizzle-orm": "^0.28.6",
+		"drizzle-zod": "^0.5.1",
+		"idb": "^7.1.1",
+		"lucide-react": "^0.284.0",
+		"nanoid": "^5.0.1",
+		"next": "13.5.4",
+		"next-auth": "^4.23.2",
+		"next-themes": "^0.2.1",
+		"postgres": "^3.3.5",
+		"react": "^18",
+		"react-day-picker": "^8.8.2",
+		"react-dom": "^18",
+		"react-hook-form": "^7.47.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^9.0.1",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/uuid": "^9.0.5",
+		"autoprefixer": "^10",
+		"dotenv": "^16.3.1",
+		"drizzle-kit": "^0.19.13",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.4",
+		"eslint-plugin-tailwindcss": "^3.13.0",
+		"eslint-plugin-unused-imports": "^3.0.0",
+		"pg": "^8.11.3",
+		"postcss": "^8",
+		"prettier": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.6",
+		"tailwindcss": "^3",
+		"tsx": "^3.13.0",
+		"typescript": "^5",
+		"husky": "^8.0.0"
+	}
 }
