--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 		"@hookform/resolvers": "^3.3.2",
 		"@internationalized/date": "^3.5.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
+		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-scroll-area": "^1.0.5",
@@ -48,6 +50,7 @@
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
 		"idb": "^7.1.1",
+		"jotai": "^2.4.3",
 		"lucide-react": "^0.284.0",
 		"nanoid": "^5.0.1",
 		"next": "13.5.4",
@@ -58,6 +61,7 @@
 		"react-day-picker": "^8.8.2",
 		"react-dom": "^18",
 		"react-hook-form": "^7.47.0",
+		"server-only": "^0.0.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^9.0.1",
