--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"react-day-picker": "^8.8.2",
 		"react-dom": "^18",
 		"react-hook-form": "^7.47.0",
+		"recharts": "^2.9.0",
 		"server-only": "^0.0.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
