--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
+		"dev:turbo": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -18,9 +19,9 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@auth/core": "^0.16.1",
-		"@auth/drizzle-adapter": "^0.3.3",
-		"@ducanh2912/next-pwa": "^9.7.1",
+		"@auth/core": "^0.18.0",
+		"@auth/drizzle-adapter": "^0.3.5",
+		"@ducanh2912/next-pwa": "^9.7.2",
 		"@hookform/resolvers": "^3.3.2",
 		"@internationalized/date": "^3.5.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
@@ -34,15 +35,15 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
-		"@react-aria/button": "^3.8.3",
-		"@react-aria/calendar": "^3.5.1",
-		"@react-aria/datepicker": "^3.8.0",
-		"@react-aria/i18n": "^3.8.3",
-		"@react-aria/interactions": "^3.19.0",
+		"@react-aria/button": "^3.8.4",
+		"@react-aria/calendar": "^3.5.2",
+		"@react-aria/datepicker": "^3.8.1",
+		"@react-aria/i18n": "^3.8.4",
+		"@react-aria/interactions": "^3.19.1",
 		"@react-stately/calendar": "^3.4.1",
 		"@react-stately/datepicker": "^3.8.0",
-		"@t3-oss/env-nextjs": "^0.7.0",
-		"@tanstack/react-table": "^8.10.6",
+		"@t3-oss/env-nextjs": "^0.7.1",
+		"@tanstack/react-table": "^8.10.7",
 		"@tanstack/react-virtual": "beta",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
@@ -50,15 +51,15 @@
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
 		"idb": "^7.1.1",
-		"jotai": "^2.4.3",
-		"lucide-react": "^0.284.0",
-		"nanoid": "^5.0.1",
-		"next": "13.5.4",
-		"next-auth": "^4.23.2",
+		"jotai": "^2.5.0",
+		"lucide-react": "^0.290.0",
+		"nanoid": "^5.0.2",
+		"next": "14.0.0",
+		"next-auth": "^4.24.3",
 		"next-themes": "^0.2.1",
-		"postgres": "^3.3.5",
+		"postgres": "^3.4.1",
 		"react": "^18",
-		"react-day-picker": "^8.8.2",
+		"react-day-picker": "^8.9.1",
 		"react-dom": "^18",
 		"react-hook-form": "^7.47.0",
 		"recharts": "^2.9.0",
@@ -73,12 +74,12 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"@types/uuid": "^9.0.5",
+		"@types/uuid": "^9.0.6",
 		"autoprefixer": "^10",
 		"dotenv": "^16.3.1",
 		"drizzle-kit": "^0.19.13",
 		"eslint": "^8",
-		"eslint-config-next": "13.5.4",
+		"eslint-config-next": "14.0.0",
 		"eslint-plugin-tailwindcss": "^3.13.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"pg": "^8.11.3",
@@ -86,8 +87,7 @@
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.6",
 		"tailwindcss": "^3",
-		"tsx": "^3.13.0",
 		"typescript": "^5",
-		"husky": "^8.0.0"
+		"husky": "^8.0.3"
 	}
 }
