added export to word file functionality

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"dayjs": "^1.11.10",
+		"docx": "^8.2.3",
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
 		"idb": "^7.1.1",
