--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"docx": "^8.2.3",
 		"drizzle-orm": "^0.28.6",
 		"drizzle-zod": "^0.5.1",
+		"i18next": "^23.6.0",
 		"idb": "^7.1.1",
 		"jotai": "^2.5.0",
 		"lucide-react": "^0.290.0",
@@ -68,7 +69,8 @@
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^9.0.1",
-		"zod": "^3.22.4"
+		"zod": "^3.22.4",
+		"zod-i18n-map": "^2.21.0"
 	},
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^4.1.1",
