--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
 		"db:studio": "drizzle-kit studio",
 		"db:check": "drizzle-kit check:pg",
 		"db:push": "drizzle-kit push:pg",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"check": "bunx tsc --noEmit"
 	},
 	"dependencies": {
 		"@auth/core": "^0.18.0",
 		"@auth/drizzle-adapter": "^0.3.5",
 		"@ducanh2912/next-pwa": "^9.7.2",
 		"@hookform/resolvers": "^3.3.2",
-		"@internationalized/date": "^3.5.0",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
@@ -35,13 +35,6 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toast": "^1.1.5",
-		"@react-aria/button": "^3.8.4",
-		"@react-aria/calendar": "^3.5.2",
-		"@react-aria/datepicker": "^3.8.1",
-		"@react-aria/i18n": "^3.8.4",
-		"@react-aria/interactions": "^3.19.1",
-		"@react-stately/calendar": "^3.4.1",
-		"@react-stately/datepicker": "^3.8.0",
 		"@t3-oss/env-nextjs": "^0.7.1",
 		"@tanstack/react-table": "^8.10.7",
 		"@tanstack/react-virtual": "beta",
