--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"i18next": "^23.7.6",
 		"jotai": "^2.5.1",
 		"lucide-react": "^0.292.0",
+		"million": "^2.6.4",
 		"nanoid": "^5.0.3",
 		"next": "14.0.2",
 		"next-auth": "^4.24.5",
