--- a/package.json
+++ b/package.json
@@ -39,14 +39,15 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-table": "^8.10.7",
     "@tanstack/react-virtual": "beta",
+    "accept-language": "^3.0.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
     "docx": "^8.2.4",
     "drizzle-orm": "^0.29.0",
     "drizzle-zod": "^0.5.1",
-    "i18next": "^23.7.6",
-    "jotai": "^2.5.1",
+    "i18next": "^23.7.11",
+    "i18next-resources-to-backend": "^1.2.0",
     "lucide-react": "^0.292.0",
     "million": "^2.6.4",
     "nanoid": "^5.0.3",
@@ -58,13 +59,14 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^14.0.0",
     "recharts": "^2.9.3",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
-    "zod-i18n-map": "^2.21.0"
+    "zod-i18n-map": "^2.23.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
