--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "check": "bunx tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "^0.18.1",
-    "@auth/drizzle-adapter": "^0.3.6",
+    "@auth/core": "^0.19.0",
+    "@auth/drizzle-adapter": "^0.3.12",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -37,32 +37,31 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-table": "^8.10.7",
-    "@tanstack/react-virtual": "beta",
-    "accept-language": "^3.0.18",
+    "@tanstack/react-table": "^8.11.2",
+    "@tanstack/react-virtual": "^3.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
-    "docx": "^8.2.4",
-    "drizzle-orm": "^0.29.0",
+    "docx": "^8.3.0",
+    "drizzle-orm": "^0.29.1",
     "drizzle-zod": "^0.5.1",
     "i18next": "^23.7.11",
     "i18next-resources-to-backend": "^1.2.0",
-    "lucide-react": "^0.292.0",
+    "lucide-react": "^0.301.0",
     "million": "^2.6.4",
-    "nanoid": "^5.0.3",
-    "next": "14.0.2",
+    "nanoid": "^5.0.4",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
-    "react-day-picker": "^8.9.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.49.2",
     "react-i18next": "^14.0.0",
-    "recharts": "^2.9.3",
+    "recharts": "^2.10.3",
     "server-only": "^0.0.1",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
@@ -70,23 +69,23 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.2",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "14.0.2",
+    "drizzle-kit": "^0.20.7",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "pg": "^8.11.3",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
     "husky": "^8.0.3"
   }
 }
