--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev:turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "bunx @biomejs/biome lint .",
-    "pretty": "bunx @biomejs/biome check --apply .",
+    "lint": "biome lint .",
+    "pretty": "biome check --apply .",
     "db:generate": "drizzle-kit generate:pg",
     "db:migrate": "bun run src/lib/db/migrate.ts",
     "db:drop": "drizzle-kit drop",
