--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "million": "^2.6.4",
     "nanoid": "^5.0.4",
     "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.2.1",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
@@ -81,5 +81,6 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
